update index.html for buttons and images

--- a/index.html
+++ b/index.html
@@ -9,12 +9,38 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-        <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
 
-        <title>What Does Milton Want?</title>
-    </head>
-    <body>
-      <h1>What Does Milton Want?</h1>
+    <title>What Does Milton Want?</title>
+</head>
+
+<body>
+    <h1>What Does Milton Want?</h1>
+
+    <p>What does Milton want?</p>
+
+    <div id="miltonStapler"><img src="https://ewedit.files.wordpress.com/2015/01/office-space_320.jpg?w=320"
+            alt="Milton Waddams of the film Office Space with his red stapler" /></div>
+
+    <button id="staplerBtn">His Stapler</button>
+
+
+
+    
+
+
+    <script type="text/javascript">
+
+        document.getElementById("staplerBtn").addEventListener("click", function () {
+
+            document.getElementById("miltonStapler").img src = "https://s7d1.scene7.com/is/image/Daytimer/S7064698_4?$SWINGLINE_ProductDetailZoom$" alt = "Red Swingline Stapler"     });
+
+
+
+
+
+    </script>
+
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
@@ -27,7 +53,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
         integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
         crossorigin="anonymous"></script>
-    <script src="script.js"></script>      
+    <script src="script.js"></script>
 </body>
 
 </html>
