--- a/index.html
+++ b/index.html
@@ -1,14 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="style.css">
     <title>What Does Milton Want?</title>
 </head>
+
 <body>
 
     <h1>What Does Milton Want?</h1>
+    <img src="http://techfunda.com/HTPictures/Generics/5-635898849972807270.JPG" id="myImage" width="100" height="150">
+    <input type="button" onclick="changeImage()" value="Change" />
+    <script>
+        function changeImage() {
+            var image = document.getElementById('myImage');
+            if (image.src.match("635898850094838508.JPG")) {
+                image.src = "/HTPictures/Generics/5-635898849972807270.JPG";
+            }
+            else {
+                image.src = "/HTPictures/Generics/5-635898850094838508.JPG";
+            }
+        }
+    </script>
+<p><strong>Note:</strong> Click on the "Change" button to Change the water bottle in to the soft drink bottle</p>
     
+
+
 </body>
+
 </html>
