--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <h2>Milton wants his stapler.</h2>
     <img src="https://am22.mediaite.com/tms/cnt/uploads/2019/04/Office-Space-Milton-1200x699.jpg" id="Milton"
         width="400">
-    <input type="button" onclick="changeImage()" value="With Stapler" />
+    <input type="button" onclick="changeImage()" value="Give Milton His Stapler" />
     <script>
         function changeImage() {
             var image = document.getElementById('Milton');
@@ -27,8 +27,9 @@
             }
         }
     </script>
-    <p><strong>Note:</strong> Click on the "With Stapler" button to see Milton with his stapler.</p>
+    <p>Click on the "Give Milton His Stapler" button to see Milton with his stapler.</p>
 
+    
 
 </body>
 
