--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
     <h1>What Does Milton Want?</h1>
 
     <h2>Milton wants his stapler.</h2>
+    
+    <div class = "Milton-container">
+        <div class = "Milton"></div>
     <img src="https://am22.mediaite.com/tms/cnt/uploads/2019/04/Office-Space-Milton-1200x699.jpg" id="Milton"
         width="400">
     <input type="button" onclick="changeImage()" value="Give Milton His Stapler" />
@@ -26,9 +29,10 @@
                 image.src = "https://ewedit.files.wordpress.com/2015/01/office-space_320.jpg?w=320";
             }
         }
+
+        </div>
     </script>
     <p>Click on the "Give Milton His Stapler" button to see Milton with his stapler.</p>
-
     
 
 </body>
